--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.2.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "pg": "^8.10.0",
     "random-user-data": "^1.0.13",
     "reflect-metadata": "^0.1.13",
